--- a/DemoTradeFrontend/src/app/app.component.html
+++ b/DemoTradeFrontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div class="w-full h-full flex">
+  <app-nav-bar></app-nav-bar>
+</div>
 <router-outlet></router-outlet>
