fix: fixed Margin

--- a/DemoTradeFrontend/src/app/app.component.html
+++ b/DemoTradeFrontend/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="w-full h-full flex">
   <app-nav-bar></app-nav-bar>
-</div>
+  <div id="Portfolio" class="w-full h-screen flex flex-col">
+    <h1 class="text-4xl font-bold self-center" >Portfolio</h1>
+    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam commodi fugit, harum in nihil, maxime molestiae error nemo quibusdam quidem excepturi nulla eius odio et illum dolor tempore architecto deleniti?</h2>
+  </div>
 <router-outlet></router-outlet>
