--- a/DemoTradeFrontend/src/app/app.component.css
+++ b/DemoTradeFrontend/src/app/app.component.css
@@ -7,3 +7,12 @@ body{
     font-family: 'Roboto', sans-serif;
     background-color: #f5f5f5;
 }
+
+#Portfolio{
+    margin: 2rem auto;
+}
+
+h1{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
