--- a/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
+++ b/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="p-2 w-20 bg-back h-screen flex flex-col justify-between items-center">
+<div class="p-2  bg-back h-screen flex flex-col justify-between items-center mr-2">
     <div id="pages" class="w-14 h-1/3 flex flex-col justify-around">
         <a href="">
             <svg class="w-auto overflow-visible fill-none stroke-black stroke-[4] transition hover:stroke-secondary" id="Portfolio"  data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98.81 82.33">
