--- a/DemoTradeFrontend/src/app/app.component.html
+++ b/DemoTradeFrontend/src/app/app.component.html
@@ -2,6 +2,8 @@
   <app-nav-bar></app-nav-bar>
   <div id="Portfolio" class="w-full h-screen flex flex-col">
     <h1 class="text-4xl font-bold self-center" >Portfolio</h1>
-    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam commodi fugit, harum in nihil, maxime molestiae error nemo quibusdam quidem excepturi nulla eius odio et illum dolor tempore architecto deleniti?</h2>
+    <div id="list" class="flex flex-col items-center w-screen">
+      <app-list-item></app-list-item>
+    </div>
   </div>
 <router-outlet></router-outlet>
