--- a/DemoTradeFrontend/src/app/list-item/list-item.component.html
+++ b/DemoTradeFrontend/src/app/list-item/list-item.component.html
@@ -1,1 +1,12 @@
-<p>list-item works!</p>
+<div class="listItem w-full h-20 bg-primary text-slate-100">
+    <div class="flex flex-row">
+        <div class="flex flex-col">
+        <h1 class="text-2xl font-bold">Stock Name</h1>
+        <h1 class="text-2xl font-bold">Stock Symbol</h1>
+        </div>
+        <div class="flex flex-col">
+        <h1 class="text-2xl font-bold">Stock Price</h1>
+        <h1 class="text-2xl font-bold">Stock Quantity</h1>
+        </div>
+    </div>
+</div>
