--- a/DemoTradeFrontend/src/app/list-item/list-item.component.html
+++ b/DemoTradeFrontend/src/app/list-item/list-item.component.html
@@ -1,12 +1,8 @@
-<div class="listItem w-full h-20 bg-primary text-slate-100">
+<div class="listItem w-full h-12 bg-primary text-slate-100 rounded">
     <div class="flex flex-row">
-        <div class="flex flex-col">
-        <h1 class="text-2xl font-bold">Stock Name</h1>
-        <h1 class="text-2xl font-bold">Stock Symbol</h1>
-        </div>
-        <div class="flex flex-col">
-        <h1 class="text-2xl font-bold">Stock Price</h1>
-        <h1 class="text-2xl font-bold">Stock Quantity</h1>
+        <div class="flex flex-row justify-around w-full items-center text-green">
+            <h1 id="currency-0" class="text-2xl font-bold">Eur</h1>
+            <h1 id="percentage-0" class="text-2xl font-bold">12%</h1>
         </div>
     </div>
 </div>
