--- a/DemoTradeFrontend/src/app/app.component.html
+++ b/DemoTradeFrontend/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div class="w-full h-full flex">
-  <app-nav-bar></app-nav-bar>
-  <div id="Portfolio" class="w-full h-screen flex flex-col">
-    <h1 class="text-4xl font-bold self-center" >Portfolio</h1>
-    <div id="list" class="flex flex-col items-center w-screen">
-      <app-list-item></app-list-item>
-    </div>
-  </div>
-<router-outlet></router-outlet>
+<div class=" overflow-hidden w-screen h-screen flex">
+  <router-outlet></router-outlet>
+</div>
