--- a/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
+++ b/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,11 @@
-<div class="p-2  bg-back h-screen flex flex-col justify-between items-center mr-2">
+<div class="p-2 overflow-hidden bg-back h-screen flex flex-col justify-between items-center mr-2">
     <div id="pages" class="w-14 h-1/3 flex flex-col justify-around">
-        <a href="">
+        <a 
+            routerLink="/"
+            routerLinkActive="portflio-active"
+            [routerLinkActiveOptions]="{exact: true}"
+            ariaCurrentWhenActive="page"
+            href="">
             <svg class="w-auto overflow-visible fill-none stroke-black stroke-[4] transition hover:stroke-secondary" id="Portfolio"  data-name="Ebene 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 98.81 82.33">
               <path id="unten" d="m0,75.33v-30.68c1.08-1.7,2.01-1.9,3.73-.75,1.53,1.02,3.2,1.39,5.02,1.39,10.39-.02,20.78-.01,31.17-.01.38,0,.75,0,1.23,0,0,2.04-.02,3.96,0,5.89.02,1.58.82,2.36,2.4,2.36,3.92,0,7.85.01,11.77,0,1.46,0,2.28-.79,2.31-2.25.04-1.64,0-3.28.01-4.92,0-.34.04-.67.06-1.07h1.26c10.36,0,20.71-.01,31.07.01,1.97,0,3.75-.45,5.34-1.6.74-.54,1.52-.68,2.35-.23.79.43,1.08,1.14,1.08,2.01,0,9.58.03,19.17-.02,28.75-.02,3.1-1.5,5.46-4.16,7.05-1.45.87-3.06,1.07-4.73,1.07-26.99-.01-53.97,0-80.96,0-.35,0-.71,0-1.06-.02-3.49-.14-6.48-2.46-7.51-5.8-.12-.39-.25-.78-.37-1.18Z"/>
               <path id="oben" d="m0,34.22c0-4.95,0-9.91,0-14.86.04-.05.1-.09.11-.15,1.26-4.7,4.05-6.84,8.91-6.84,6.17,0,12.35,0,18.52,0,.38,0,.76,0,1.26,0,0-1.41-.03-2.72,0-4.03C28.92,3.7,32.27.1,36.75.05c8.46-.08,16.91-.06,25.37,0,3.61.03,6.71,2.54,7.54,6.07.33,1.42.26,2.93.34,4.4.03.59,0,1.19,0,1.85.55,0,.93,0,1.31,0,6.3,0,12.6-.01,18.91,0,5.11.02,8.57,3.51,8.58,8.63,0,3.83,0,7.65,0,11.48,0,5.2-3.51,8.69-8.73,8.69-10.45,0-20.9,0-31.35,0h-1.07c0-.69.01-1.23,0-1.78-.05-1.54-.8-2.31-2.34-2.32-3.95-.01-7.91-.02-11.87,0-1.49,0-2.24.77-2.29,2.26-.02.59,0,1.19,0,1.74-.22.05-.28.08-.34.08-11,0-21.99.03-32.99-.02-3.4-.02-6.42-2.47-7.45-5.75-.12-.39-.25-.78-.38-1.17ZM61.73,8.3h-24.61v3.99h24.61v-3.99Z"/>
