feat: finished list-item not backend connected

--- a/DemoTradeFrontend/src/app/portfolio/portfolio.component.html
+++ b/DemoTradeFrontend/src/app/portfolio/portfolio.component.html
@@ -3,7 +3,8 @@
     <div class="flex flex-col w-screen">
         <h1 class="text-4xl font-bold self-center" >Portfolio</h1>
         <div id="list" class="flex flex-col items-center w-full">
-        <app-list-item class="w-1/2"></app-list-item>
+        <app-list-item></app-list-item>
+        <app-list-item></app-list-item>
         </div>
     </div>
   </div>
