--- a/DemoTradeFrontend/src/app/list-item/list-item.component.html
+++ b/DemoTradeFrontend/src/app/list-item/list-item.component.html
@@ -1,8 +1,25 @@
-<div class="listItem w-full h-12 bg-primary text-slate-100 rounded">
-    <div class="flex flex-row">
-        <div class="flex flex-row justify-around w-full items-center text-green">
-            <h1 id="currency-0" class="text-2xl font-bold">Eur</h1>
+<div class="listItem w-screen h-auto flex flex-col items-center text-slate-100 ">
+   
+    <div class="flex p-4 m-3 flex-col h-auto  w-1/2 bg-primary rounded" >
+        <div  class="flex flex-row justify-around items-center w-full text-rise" (click)="showMore()">
+            <h1 id="currency-0" class="text-2xl font-bold">EUR</h1>
             <h1 id="percentage-0" class="text-2xl font-bold">12%</h1>
+            <h1 id="amount-0" class="text-2xl font-bold"> 1012.2</h1>            
+        </div>
+        <div *ngIf="getOpen()">
+            <!--TODO: connect to backend-->
+            <form class="text-black flex flex-col p-4">  
+                <div class="flex flex-row justify-between">             
+                    <select id="swaps" name="swaps" class="w-1/3 h-10 rounded">
+                        <option value="EUR">EUR</option>
+                        <option value="USD">USD</option>
+                        <option value="HKD">HKD</option>
+                        <option value="JPY">JPY</option>
+                    </select>
+                    <input (change)="amountChange($event)" id="amount" class="w-6/12 p-2 rounded" type="text" placeholder="Amount of current Currency">
+                </div>
+                <button class="p-2 mt-6 h-10 rounded bg-secondary text-white" *ngIf="getConvertable()" type="submit"> Convert </button>
+            </form>
         </div>
     </div>
 </div>
