fix: cursor to pointer on submit

--- a/DemoTradeFrontend/src/app/sign-up/sign-up.component.html
+++ b/DemoTradeFrontend/src/app/sign-up/sign-up.component.html
@@ -11,7 +11,7 @@
             <input class="rounded p-2" id="password" placeholder="8-64 characters" type="password" >
             <label class="mt-4" for="password">Retype Password</label>
             <input class="rounded p-2" id="password" placeholder="*******" type="password" >
-            <input class="mt-6 rounded p-4 font-semibold text-xl bg-primary text-white" type="button" value="Submit">
+            <input class="mt-6 rounded p-4 font-semibold text-xl cursor-pointer bg-primary text-white" type="button" value="Submit">
         </form>
         <a class="mt-4 underline self-center" href="/login">Already got a Account?</a>
     </div>
