--- a/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
+++ b/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
 <div class="p-2 overflow-hidden bg-back h-screen flex flex-col justify-between items-center mr-2">
     <div id="pages" class="w-14 h-1/3 flex flex-col justify-around">
         <a 
-            routerLink="/"
-            routerLinkActive="portflio-active"
+            [routerLink]="['/']"
+            routerLinkActive="active"
             [routerLinkActiveOptions]="{exact: true}"
             ariaCurrentWhenActive="page"
             href="">
@@ -11,7 +11,12 @@
               <path id="oben" d="m0,34.22c0-4.95,0-9.91,0-14.86.04-.05.1-.09.11-.15,1.26-4.7,4.05-6.84,8.91-6.84,6.17,0,12.35,0,18.52,0,.38,0,.76,0,1.26,0,0-1.41-.03-2.72,0-4.03C28.92,3.7,32.27.1,36.75.05c8.46-.08,16.91-.06,25.37,0,3.61.03,6.71,2.54,7.54,6.07.33,1.42.26,2.93.34,4.4.03.59,0,1.19,0,1.85.55,0,.93,0,1.31,0,6.3,0,12.6-.01,18.91,0,5.11.02,8.57,3.51,8.58,8.63,0,3.83,0,7.65,0,11.48,0,5.2-3.51,8.69-8.73,8.69-10.45,0-20.9,0-31.35,0h-1.07c0-.69.01-1.23,0-1.78-.05-1.54-.8-2.31-2.34-2.32-3.95-.01-7.91-.02-11.87,0-1.49,0-2.24.77-2.29,2.26-.02.59,0,1.19,0,1.74-.22.05-.28.08-.34.08-11,0-21.99.03-32.99-.02-3.4-.02-6.42-2.47-7.45-5.75-.12-.39-.25-.78-.38-1.17ZM61.73,8.3h-24.61v3.99h24.61v-3.99Z"/>
             </svg>
         </a>
-        <a href="">
+        <a 
+            [routerLink]="['/market']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}"
+            ariaCurrentWhenActive="page"
+            href="">
             <svg class="w-auto overflow-visible fill-none stroke-black stroke-[4] transition hover:stroke-secondary" id="barChartSvg" data-name="barChartSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100.02 99.87">
                 <path id="mid-left" d="m42.87,49.96c0,14.15,0,28.29,0,42.44,0,4.32-3.18,7.52-7.33,7.43-3.66-.08-6.73-3.04-6.94-6.7-.02-.3-.01-.59-.01-.89,0-28.22,0-56.44,0-84.66,0-3.76,2.14-6.62,5.51-7.39,4.45-1.02,8.68,2.22,8.76,6.78.06,3.6.02,7.2.02,10.8,0,10.73,0,21.46,0,32.19Z"/>
                 <path id="right" d="m100.02,64.25c0,9.47.02,18.93-.01,28.4,0,2.78-1.26,4.95-3.72,6.29-2.41,1.32-4.87,1.24-7.2-.22-2.29-1.44-3.36-3.59-3.35-6.28,0-11.29,0-22.57,0-33.86,0-7.65-.03-15.3.02-22.94.02-2.98,1.45-5.2,4.16-6.45,2.72-1.25,5.31-.84,7.61,1.06,1.77,1.46,2.51,3.43,2.51,5.71-.01,9.43,0,18.86,0,28.29Z"/>
@@ -19,7 +24,12 @@
                 <path id="mid-right" d="m71.44,78.47c0,4.79.04,9.58-.01,14.36-.04,3.55-2.64,6.41-6.19,6.94-3.32.49-6.68-1.61-7.71-4.89-.24-.77-.35-1.6-.36-2.4-.02-9.35-.02-18.71-.01-28.06,0-4.21,3.1-7.38,7.15-7.38,4.04,0,7.11,3.18,7.13,7.4.02,4.68,0,9.35,0,14.03h0Z"/>
             </svg>
         </a>
-        <a href="">
+        <a 
+            [routerLink]="['/diagrams']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}"
+            ariaCurrentWhenActive="page"
+            href="">
             <svg class="w-auto overflow-visible fill-none stroke-black stroke-[4] transition hover:stroke-secondary" id="PieChart" data-name="PieChart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 99.82 91.02">
                 <path id="small" d="m99.82,53.07c-.32,1.9-.58,3.82-.97,5.71-1.32,6.34-4.01,12.05-7.92,17.21-.57.75-1.16,1.48-1.76,2.2-1.22,1.44-2.85,1.52-4.24.23-.12-.11-.23-.23-.35-.34-7.85-7.82-15.7-15.64-23.52-23.49-.52-.52-1-1.23-1.17-1.93-.38-1.5.74-2.92,2.3-3.11.38-.05.78-.05,1.17-.05,10.97,0,21.93.02,32.9-.02,1.67,0,2.89.48,3.59,2.04v1.55Z"/>
                 <path id="large" d="m44.1,26.2c0,6.41.02,12.82-.02,19.23,0,1.22.39,2.15,1.25,3.01,9.06,9,18.09,18.03,27.13,27.05.23.23.47.45.68.69,1.19,1.32,1.1,2.96-.25,4.11-7.83,6.63-16.85,10.22-27.15,10.68-18.54.84-36.17-10.44-42.86-28.48-4.17-11.24-3.89-22.5,1.21-33.41C10.32,15.76,20.78,7.5,35.16,4.25c1.95-.44,3.97-.62,5.97-.83,1.7-.18,2.95,1.1,2.97,2.96.03,2.46,0,4.92,0,7.38,0,4.14,0,8.29,0,12.43h0Z"/>
