--- a/DemoTradeFrontend/src/app/list-item/list-item.component.html
+++ b/DemoTradeFrontend/src/app/list-item/list-item.component.html
@@ -18,7 +18,7 @@
                     </select>
                     <input (change)="amountChange($event)" id="amount" class="w-6/12 p-2 rounded" type="text" placeholder="Amount of current Currency">
                 </div>
-                <button class="p-2 mt-6 h-10 rounded bg-secondary text-white" *ngIf="getConvertable()" type="submit"> Convert </button>
+                <button class="p-2 mt-6 h-10 rounded font-semibold text-xl cursor-pointer bg-secondary text-white" *ngIf="getConvertable()" type="submit"> Convert </button>
             </form>
         </div>
     </div>
