--- a/DemoTradeFrontend/src/app/log-in/log-in.component.html
+++ b/DemoTradeFrontend/src/app/log-in/log-in.component.html
@@ -2,12 +2,15 @@
     <div class="p-12 w-4/12 h-auto drop-shadow bg-back flex flex-col justify-center">
         <img class="self-center" src="assets/images/Logo.svg" width="120" height="120" alt="Demo Trade Logo">
         <!-- TODO: connect to backend -->
-        <form class="flex flex-col" action="">
+        <form [formGroup]="form" class="flex flex-col" action="">
             <label class="mt-4" for="user-name">Enter a Username</label>
             <input class="rounded p-2" id="user-name" placeholder="Max Mustermann" type="text">
             <label class="mt-4" for="password">Enter Password</label>
             <input class="rounded p-2" id="password" placeholder="8-64 characters" type="password" >
             <input class="mt-6 rounded text-white font-semibold text-xl cursor-pointer p-4 bg-primary" type="button" value="Submit">
         </form>
+      <a [routerLink]="['/signup']"
+        class="mt-4 underline self-center"
+      >Create an Account here</a>
     </div>
 </div>
