--- a/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
+++ b/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div class="p-2 overflow-hidden bg-back h-screen flex flex-col justify-between items-center mr-2">
     <div id="pages" class="w-14 h-1/3 flex flex-col justify-around">
         <a 
-            [routerLink]="['/']"
+            [routerLink]="['/portfolio']"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{exact: true}"
             ariaCurrentWhenActive="page"
