--- a/DemoTradeFrontend/src/app/portfolio/portfolio.component.html
+++ b/DemoTradeFrontend/src/app/portfolio/portfolio.component.html
@@ -2,7 +2,10 @@
     <app-nav-bar></app-nav-bar>
     <div class="flex flex-col w-screen">
         <h1 class="text-4xl font-bold self-center" >Portfolio</h1>
+        
+          
         <div id="list" class="flex flex-col items-center w-full">
+          <h1>{{ currentUser | json }}</h1>
         <app-list-item></app-list-item>
         <app-list-item></app-list-item>
         </div>
