--- a/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
+++ b/DemoTradeFrontend/src/app/nav-bar/nav-bar.component.html
@@ -38,7 +38,11 @@
         </a>
     </div>
     <div id="logOut" class="w-10 h-auto flex flex-col justify-around">
-        <a href="">
+        <a 
+            [routerLink]="['/login']"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}"
+        href="">
             <svg class="overflow-visible fill-black hover:fill-secondary" id="LogOut" data-name="LogOut" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 99.99">
                 <path id="Rec" d="m50.19,0c1.38.34,2.81.56,4.14,1.04,6.23,2.29,10.29,8.03,10.45,14.75.08,3.32.05,6.64,0,9.95-.03,2.78-2.08,4.85-4.71,4.83-2.63-.01-4.63-2.08-4.65-4.86-.02-3.06,0-6.12,0-9.17-.01-4.36-2.79-7.15-7.14-7.15-10.58,0-21.16,0-31.74,0-4.37,0-7.16,2.79-7.16,7.13,0,22.32,0,44.64,0,66.95,0,4.28,2.8,7.1,7.09,7.1,10.61.01,21.22,0,31.83,0,4.29,0,7.09-2.8,7.11-7.09.01-3.71-.02-7.42.02-11.13.02-1.94,1.03-3.35,2.79-4.11,1.76-.76,3.45-.49,4.93.75,1.03.86,1.6,2.01,1.6,3.33.01,4.36.19,8.73-.13,13.07-.6,8.18-7.39,14.45-15.62,14.52-11.07.1-22.13.1-33.2,0C6.96,99.84.02,92.7.01,83.79c-.02-19,0-38,0-57,0-3.42,0-6.83,0-10.25C.01,7.9,5.6,1.44,14.18.15,14.33.13,14.48.05,14.64,0c11.85,0,23.7,0,35.55,0Z"/>
                 <path id="Arrow" d="m100,50.96c-.48,1.46-1.49,2.54-2.56,3.59-5.1,5.07-10.19,10.15-15.27,15.24-1.46,1.46-3.15,2.05-5.15,1.36-3.26-1.13-4.19-5.21-1.73-7.72,2.57-2.63,5.19-5.21,7.8-7.8.25-.25.55-.46.83-.68-.03-.09-.06-.19-.09-.28h-.98c-13.05,0-26.1,0-39.15,0-2.57,0-4.45-1.5-4.88-3.88-.5-2.74,1.54-5.32,4.34-5.48.36-.02.72,0,1.07,0,12.82,0,25.65,0,38.47,0,.36,0,.71,0,1.32,0-.33-.35-.53-.57-.73-.78-2.64-2.65-5.31-5.28-7.93-7.95-1.35-1.37-1.72-3.04-1.14-4.87.56-1.77,1.86-2.79,3.67-3.1,1.51-.26,2.87.17,3.94,1.24,5.63,5.59,11.26,11.2,16.84,16.85.61.62.91,1.54,1.35,2.32v1.95Z"/>
