--- a/DemoTradeFrontend/src/app/portfolio/portfolio.component.html
+++ b/DemoTradeFrontend/src/app/portfolio/portfolio.component.html
@@ -2,12 +2,12 @@
     <app-nav-bar></app-nav-bar>
     <div class="flex flex-col w-screen">
         <h1 class="text-4xl font-bold self-center" >Portfolio</h1>
-        
-          
+
+
         <div id="list" class="flex flex-col items-center w-full">
           <h1>{{ currentUser | json }}</h1>
-        <app-list-item></app-list-item>
-        <app-list-item></app-list-item>
+          <h2 *ngIf="this.stocks.length === 0">No stocks bought yet</h2>
+          <app-list-item *ngFor="let stock of this.stocks" [stock]="stock"></app-list-item>
         </div>
     </div>
   </div>
